--- a/views/candleView.ejs
+++ b/views/candleView.ejs
@@ -1,37 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
-    <h2>الشموع<h3>
-    <div>
-        <ul>
-    <% for (let i = 0; i < results.length; i++) { %>
-        
-        <li style="color: <%= results[i].color %>;  ">
-            <%= results[i].pair %> : <%= results[i].state %>
-            
-        </li>
-       
-      <% } %>
-    </ul>
+  <div class='candlestick-container'>
+
+    <div class='candlestick'>
+        <div class='upper-shadow'></div>
+        <div class='body'></div>
+        <div class='lower-sahdow'></div>
+        <h6>USDEUR</h6>
+        <h6>دسمة</h6>
+    </div>
     
-    </div>
-    <h2>استراتيجية ال 6 د + 1 ر</h3>
-    <div>
-        <ul>
-    <% for (let i = 0; i < sixFatsOneThin.length; i++) { %>
-        
-        <li>
-            <%= sixFatsOneThin[i].symbol %> : <%=sixFatsOneThin[i].count%>
-            
-        </li>
-       
-      <% } %>
-    </ul>
-    </div>
+  </div>
 </body>
 </html>
