--- a/views/candleView.ejs
+++ b/views/candleView.ejs
@@ -14,7 +14,7 @@
         <div class='candlestick'>
             <div class='upper-shadow' style="background: <%=candles[i].color%>; height: <%=candles[i].upperShadow%>%"></div>
             <div class='body' style="background: <%=candles[i].color%>; height: <%=candles[i].body%>%"></div>
-            <div class='lower-sahdow' style="background: <%=candles[i].color%>; height: <%=candles[i].lowerShade%>%"></div>
+            <div class='lower-sahdow' style="background: <%=candles[i].color%>; height: <%=candles[i].lowerShadow%>%"></div>
             <h6><%= candles[i].pair %></h6>
             <h6><%= candles[i].state %></h6>
         </div>
